Several Text / Info Updates

--- a/webapp/templates/api.html
+++ b/webapp/templates/api.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
-{% block title %}API{% endblock %}
-{% block ogtitle %}API{% endblock %}
+{% block title %}API von "Was passiert bei mir?"{% endblock %}
+{% block ogtitle %}API von "Was passiert bei mir?"{% endblock %}
 {% block meta_description %}Für echte Offenheit braucht es offene Schnittstellen. Hier gibt es Informationen über unsere Webservice API.{% endblock %}
 
 {% block riscontent %}
 <div id="api">
 <div class="content top">
-  <h1>Die {{ config.APP_NAME }} API</h1>
+  <h1>Die "Was passiert bei mir?" API</h1>
   <blockquote class="nice">API = engl. <em>Application Program Interface</em>: Eine Programmierschnittstelle für den Zugriff auf ein System.</blockquote>
   
   <p class="text">Das Ziel des offenen Ratsinformationssystems ist es, Daten und Informationen der Lokalpolitik so weit wie möglich für jede denkbare Nutzung zu öffnen. Dazu gehört auch die Öffnung für den Zugriff mit Hilfe von Programmen und Systemen.</p>
