--- a/webapp/templates/impressum.html
+++ b/webapp/templates/impressum.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
-{% block title %}Über OpenRuhr:RIS{% endblock %}
-{% block ogtitle %}Über Offenes Köln{% endblock %}
-{% block meta_description %}Ziele und Pläne für Offenes Köln und weitere Informationen{% endblock %}
+{% block title %}Impressum von "Was passiert bei mir?"{% endblock %}
+{% block ogtitle %}Impressum von "Was passiert bei mir?"{% endblock %}
+{% block meta_description %}Impressum von "Was passiert bei mir?"{% endblock %}
 
 {% block riscontent %}
 <div class="content top">
