--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}Startseite{% endblock %}
-{% block ogtitle %}Startseite{% endblock %}
+{% block title %}Startseite von "Was passiert bei mir?"{% endblock %}
+{% block ogtitle %}Startseite von "Was passiert bei mir?"{% endblock %}
 {% block meta_description %}{{ config.META_DESCR|safe }}{% endblock %}
 
 {% block scripts %}
