--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -67,10 +67,10 @@ _gaq.push(['_trackPageview']);
 <div id="container">
 	<header>
 		<div id="topnav"><a href="/">Startseite</a> | <a href="http://openruhr.de/">Blog</a> | <a href="mailto:info@openruhr.de">Kontakt</a> | <a href="/impressum/">Impressum</a></div>
-		<div id="logo"><a href="/"><img src="/static/img/logo/OpenRuhrLogo.png" alt="" /></a></div>
+		<div id="logo"><a href="/"><img src="/static/img/logo/WasPassiertBeiMirLogo.png" alt="Was passiert bei mir? Logo" /></a></div>
 		<div id="nametagline">
 			<div><a id="name" href="/">Offenes Ratsinformationssystem</a></div>
-			<div id="tagline">Transparente Kommunalpolitik für ganz Deutschland <a href="/ueber/">Mehr erfahren</a></div>
+			<div id="tagline">Transparente Kommunalpolitik für ganz Deutschland</div>
 		</div>
 	</header>
 	<div id="main" role="main">
@@ -101,6 +101,6 @@ _gaq.push(['_trackPageview']);
 			</ul>
 		</div>
 	</footer>
-</div> <!--! end of #container -->
+</div>
 {% endblock %}
 
