--- a/webapp/templates/paper_details.html
+++ b/webapp/templates/paper_details.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}{{ paper.title }}{% endblock %}
-{% block ogtitle %}{{ paper.title }}{% endblock %}
+{% block title %}{{ paper.title }} auf "Was passiert bei mir?"{% endblock %}
+{% block ogtitle %}{{ paper.title }} auf "Was passiert bei mir?"{% endblock %}
 {% block meta_description %}Hier steht alles, was wir über einen Antrag oder ein sonstiges Dokument wissen.{% endblock %}
 
 {% block scripts %}
