--- a/webapp/templates/suche.html
+++ b/webapp/templates/suche.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
-{% block title %}Suche{% endblock %}
-{% block ogtitle %}Suche{% endblock %}
-{% block meta_description %}Hier findest Du alle amtlichen Dokumente im Bestand{% endblock %}
+{% block title %}Suche auf "Was passiert bei mir?"{% endblock %}
+{% block ogtitle %}Suche auf "Was passiert bei mir?"{% endblock %}
+{% block meta_description %}Hier findest Du alle Dokumente im Bestand{% endblock %}
 
 {% block head %}
 {{ super() }}
