--- a/webapp/templates/disclaimer.html
+++ b/webapp/templates/disclaimer.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}Disclaimer{% endblock %}
-{% block ogtitle %}Disclaimer{% endblock %}
+{% block title %}Disclaimer von "Was passiert bei mir?"{% endblock %}
+{% block ogtitle %}Disclaimer von "Was passiert bei mir?"{% endblock %}
 {% block meta_description %}Ein paar Worte zur Vorsicht{% endblock %}
 
 {% block riscontent %}
