--- a/webapp/templates/admin_response.html
+++ b/webapp/templates/admin_response.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Admin{{super()}}{% endblock %}
+{% block title %}{{super()}}{% endblock %}
 
 {% block content %}
 
