--- a/webapp/templates/disclaimer.html
+++ b/webapp/templates/disclaimer.html
@@ -1,12 +1,12 @@
 {% extends "layout.html" %}
-{% block title %}Disclaimer von "Was passiert bei mir?"{% endblock %}
-{% block ogtitle %}Disclaimer von "Was passiert bei mir?"{% endblock %}
-{% block meta_description %}Ein paar Worte zur Vorsicht{% endblock %}
+{% block title %}Disclaimer | {{ config.site_name }}{% endblock %}
+{% block ogtitle %}Disclaimer | {{ config.site_name }}{% endblock %}
+{% block meta_description %}Wichtige Hinweise zur Datenqualität und Datenherkunft{% endblock %}
 
 {% block riscontent %}
 
 <div class="content">
-	<h1>Wichtige Hinweise zur Datenqualität, Haftungsausschluss</h1>
+	<h1>Wichtige Hinweise zur Datenqualität und Datenherkunft</h1>
 	
 	<div class="text">
 		
