--- a/webapp/templates/hilfe.html
+++ b/webapp/templates/hilfe.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
-{% block title %}Über OpenRuhr:RIS{% endblock %}
-{% block ogtitle %}Über Offenes Köln{% endblock %}
-{% block meta_description %}Ziele und Pläne für Offenes Köln und weitere Informationen{% endblock %}
+{% block title %}Hilfe | {{ config.site_name }}{% endblock %}
+{% block ogtitle %}Hilfe | {{ config.site_name }}{% endblock %}
+{% block meta_description %}Eine kurze Anleitung, was man wie mit {{ config.site_name }} machen kann.{% endblock %}
 
 {% block riscontent %}
 
