--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
-{% block title %}Startseite von "Was passiert bei mir?"{% endblock %}
-{% block ogtitle %}Startseite von "Was passiert bei mir?"{% endblock %}
-{% block meta_description %}{{ config.META_DESCR|safe }}{% endblock %}
+{% block title %}Startseite | {{ config.site_name }}{% endblock %}
+{% block ogtitle %}Startseite | {{ config.site_name }}{% endblock %}
+{% block meta_description %}Informiere Dich auf {{ config.site_name }} über Deine lokale Politik, um mitreden zu können!{% endblock %}
 
 {% block scripts %}
 {{ super() }}
