--- a/webapp/templates/suche.html
+++ b/webapp/templates/suche.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}Suche auf "Was passiert bei mir?"{% endblock %}
-{% block ogtitle %}Suche auf "Was passiert bei mir?"{% endblock %}
+{% block title %}Suche | {{ config.site_name }}{% endblock %}
+{% block ogtitle %}Suche | {{ config.site_name }}{% endblock %}
 {% block meta_description %}Hier findest Du alle Dokumente im Bestand{% endblock %}
 
 {% block head %}
