--- a/webapp/templates/ueber.html
+++ b/webapp/templates/ueber.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
-{% block title %}Über "Was passiert bei mir?"{% endblock %}
-{% block ogtitle %}Über O"Was passiert bei mir?"{% endblock %}
-{% block meta_description %}Ziele und Pläne für "Was passiert bei mir?" und weitere Informationen{% endblock %}
+{% block title %}Über das Projekt | {{ config.site_name }}{% endblock %}
+{% block ogtitle %}Über das Projekt | {{ config.site_name }}{% endblock %}
+{% block meta_description %}Ziele und Pläne für {{ config.site_name }} und weitere Informationen{% endblock %}
 
 {% block riscontent %}
 
@@ -25,7 +25,7 @@
 	<div style="text-align: center; margin: 3em 5em;">
 		<p>Wir haben eine Seite eigens zu dem Zweck, damit Du Anregungen und Verbesserungsvorschläge öffentlich äußern kann. Du kannst außerdem Vorschläge von anderen sehen, bewerten und kommentieren. Die Vorschläge werden auch hier einfließen.</p>
 		<p>Du kannst dort ebenso Städte vorschlagen, welche du hier veröffentlichst sehen möchtest. Bitte beachte dabei aber, dass eine neue Stadt viel Arbeit bedeutet. Wenn Du programmieren kannst und / oder finanzielle Ressourcen hast, wird das vieles vereinfachen. <a href="/impressum/">Kontaktiere uns dazu gerne direkt!</a></p>
-		<p><a class="awesome large" href="http://was-passiert-bei-mir.uservoice.com/" target="_blank">Ideen ansehen und hinzufügen &nbsp; &rarr;</a></p>
+		<p><a class="awesome large" href="http://politik-bei-uns.uservoice.com/" target="_blank">Ideen ansehen und hinzufügen &nbsp; &rarr;</a></p>
 	</div>
 </div>
 <div class="content middle" id="mitmischen">
