--- a/webapp/templates/daten.html
+++ b/webapp/templates/daten.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
-{% block title %}Daten{% endblock %}
-{% block ogtitle %}Daten{% endblock %}
+{% block title %}Daten zum Download | {{ config.site_name }}{% endblock %}
+{% block ogtitle %}Daten zum Download | {{ config.site_name }}{% endblock %}
 {% block meta_description %}Hier kannst Du die Daten hinter dem offenen Ratsinformationssystem herunter laden. Open Data First!{% endblock %}
 
 {% block riscontent %}
@@ -9,11 +9,11 @@
 	<h1>Daten</h1>
 	<div class="text">
 		
-		<p>Die Datenbank hinter {{ config.BASE_HOST }} steht zum Download zur Verfügung. Bitte beachte, dass wir auch eine <a href="/api/">Programmierschnittstelle (API)</a> anbieten, mit sich Daten <strong>gezielt abfragen</strong> lassen.</p>
+		<p>Die Datenbank hinter {{ config.site_host }} steht zum Download zur Verfügung. Bitte beachte, dass wir auch eine <a href="/api/">Programmierschnittstelle (API)</a> anbieten, mit sich Daten <strong>gezielt abfragen</strong> lassen.</p>
 		
 		<p>Bei den Inhalten handelt es sich größtenteils um amtliche Dokumente, die um einige Daten angereichert wurden.</p>
 		
-		<p>Wenn Du die Daten für eigene Projekte nutzt, freuen wir uns über eine <a href="/kontakt/">Nachricht</a> und einen Link zu {{ config.BASE_HOST }}!</p>
+		<p>Wenn Du die Daten für eigene Projekte nutzt, freuen wir uns über eine <a href="/kontakt/">Nachricht</a> und einen Link zu {{ config.site_host }}!</p>
 
 	</div>
 </div>
