--- a/webapp/templates/impressum.html
+++ b/webapp/templates/impressum.html
@@ -1,31 +1,33 @@
 {% extends "layout.html" %}
-{% block title %}Impressum von "Was passiert bei mir?"{% endblock %}
-{% block ogtitle %}Impressum von "Was passiert bei mir?"{% endblock %}
-{% block meta_description %}Impressum von "Was passiert bei mir?"{% endblock %}
+{% block title %}Impressum | {{ config.site_name }}"{% endblock %}
+{% block ogtitle %}Impressum | {{ config.site_name }}{% endblock %}
+{% block meta_description %}Impressum von {{ config.site_name }}{% endblock %}
 
 {% block riscontent %}
 <div class="content top">
 	<h1>Impressum</h1>
-  
-	<h2 class="top-nomargin">Impressum und Kontakt</h2>
 
-	<p><strong>Anbieter im Sinne des Telemediengesetzes</strong></p>
-	<p>Open Knowledge Foundation Deutschland e.V.<br />
+	<p><strong>Anbieter im Sinne des § 5 Telemediengesetzes</strong><br />
+	Open Knowledge Foundation Deutschland e.V.<br />
 	Schlesische Str. 6<br />
-	10997 Berlin Deutschland</p>
+	10997 Berlin</p>
 	
-	<p>Vereinsregister Nr: VR 30468 B<br />
-	Steuernummer: 27/674/52428<br />
-	VAT: DE278022128</p>
-	
-	<p>E-Mail: <a href="mailto:info@okfn.de">info@okfn.de</a><br />
+	<p><strong>Kontakt</strong><br />
+	E-Mail: <a href="{{ config.contact_mail }}">{{ config.contact_mail }}</a><br />
 	Telefon: <a href="tel:+4930577036660">+49 30 57703666-0</a><br />
 	Fax: +49 30 57703666-9</p>
+	
+	<p><strong>Eintragung im Vereinsregister</strong><br />
+	Vereinsregister-Nummer: VR 30468 B<br />
+	Vereinsregister-Gericht: Amtsgericht Charlottenburg (Berlin) 
+	Steuernummer: 27/674/52428<br />
+	Umsatzsteuer-Identifikationsnummer: DE278022128</p>
+	
 </div>
 
 <div class="content middle">
 	<h2 class="top-nomargin">Haftung für Inhalte</h2>
-	<p>Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach § 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
+	<p>Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</p>
 </div>
 
 <div class="content middle">
@@ -35,41 +37,6 @@
 
 <div class="content middle">
 	<h2>Urheberrecht</h2>
-	<p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Sie sind mit einer Creative Commons Lizenz urheberrechtlich geschützt. Sofern nicht anders angegeben, stehen die Inhalte dieser Seite unter der Creative Commons Namensnennung 3.0 DE Lizenz. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Inhalte aus den Ratsinformationssystemen liegen in urheberrechtlicher Verantwortung der Städte. Für Fragen zu Urheberrecht und Lizenzen städtischer Dokumente verweisen wir Sie somit an die jeweilige Stadt. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
-</div>
-
-<div class="content bottom">
-	<h2 class="top-nomargin">Datenschutzerklärung</h2>
-	
-	<p>I. Datenerhebung und Datenverarbeitung</p>
-	<p>Die Sicherheit Ihrer Daten hat bei uns höchste Priorität. Wir ergreifen jede nur mögliche Maßnahme, um Ihre persönlichen Daten vor unbefugtem Zugriff zu schützen. Sämtliche Anforderungen des Bundesdatenschutzgesetzes (BDSG), Telemediengesetzes (TMG) sowie alle weiteren datenschutzrechtlichen Vorschriften werden von uns eingehalten. Sie können unsere Seite besuchen, ohne Angaben zu Ihrer Person zu machen. Wir speichern dann lediglich Zugriffsdaten ohne Personenbezug. Dabei handelt es sich z.B. um Daten</p>
-	<ul>
-		<li>der Rechneradresse (IP-Adresse) in gekürzter Form,</li>
-		<li>der Seite, von der aus die Datei angefordert wurde,</li>
-		<li>dem Namen der übertragenen Datei,</li>
-		<li>dem Datum und der Uhrzeit der Abfrage,</li>
-		<li>der übertragenen Datenmenge,</li>
-		<li>dem Zugriffsstatus (Datei übertragen, Datei nicht gefunden etc.) und</li>
-		<li>einer Beschreibung des Typs des verwendeten Webbrowsers.</li>
-	</ul>
-	<p>Diese Daten werden ausschließlich zur Verbesserung unseres Angebotes ausgewertet und erlauben keine Rückschlüsse auf Ihre Person.</p>
-	
-	<p>II. Erhebung und Speicherung personenbezogener</p>
-	<p>Daten Personenbezogene Daten wie Name, Username und zusätzliche Metadaten wie z. B. Anschrift, Telefonnummer und Email-Adresse (Bestandsdaten) werden erhoben, wenn und soweit dies im Rahmen der Begründung und Abwicklung eines Vertragsverhältnisses sowie für dessen inhaltliche Ausgestaltung oder Änderung erforderlich ist. Diese Daten werden in der Regel in elektronischen Anmeldeformularen erhoben. Mit vollständiger Abwicklung des Vertrages werden Ihre Daten für die weitere Verwendung gesperrt und nach Ablauf der steuer- und handelsrechtlichen Vorschriften gelöscht, sofern Sie nicht ausdrücklich in die weitere Nutzung Ihrer Daten eingewilligt haben.</p>
-	
-	<p>III. Übermittlung von Daten an Dritte</p>
-	<p>Eine Weitergabe Ihrer personenbezogenen Daten an Dritte erfolgt grundsätzlich nur, sofern dies zur Erbringung unserer Dienstleistung oder zur Vertragsdurchführung notwendig ist und Sie ausdrücklich eingewilligt haben.</p>
-	
-	<p>IV. Verwendung von Cookies</p>
-	<p>Diese Website nutzt <a href="http://www.piwik.org">Piwik</a>, einen Open-Source-Webanalysedienst. Piwik verwendet sogenannte “Cookies”, Textdateien, die auf Ihrem Computer gespeichert werden und die eine Analyse der Benutzung der Website durch Sie ermöglicht. Die durch den Cookie erzeugten Informationen über Ihre Benutzung dieser Website (einschließlich Ihrer IP-Adresse) bleiben dabei unter der Datenhoheit dieser Seite. Wir benutzen diese Informationen, um die Nutzung auszuwerten und um Reports über die Websiteaktivitäten zusammenzustellen. Wir werden diese Informationen nicht an Dritte übertragen. Sie können die Installation der Cookies durch eine entsprechende Einstellung Ihrer Browser-Software verhindern; wir weisen Sie jedoch darauf hin, dass Sie in diesem Fall gegebenenfalls nicht sämtliche Funktionen dieser Website voll umfänglich nutzen können. Durch die Nutzung dieser Website erklären Sie sich mit der Bearbeitung der über Sie erhobenen Daten durch diese Seite in der zuvor beschriebenen Art und Weise und zu dem zuvor benannten Zweck einverstanden.</p>
-	
-	<p>V. Abrufbarkeit der Datenschutzerklärung</p>
-	<p>Sie können die Datenschutzerklärung jederzeit von jeder Seite dieses Internetangebots unter dem Link „Impressum“ abrufen. Bitte nehmen Sie zur Kenntnis, dass Änderungen des Angebots, gesetzliche und rechtliche Neuerungen sowie ggf. nachträglich erkannte Regelungslücken Änderungen dieser Datenschutzerklärung erforderlich werden lassen können.</p>
-	
-	<p>VI. Fragen und Auskunftsrecht</p>
-	<p>Ihr Vertrauen ist uns wichtig. Daher möchten wir Ihnen jederzeit und kostenlos Rede und Antwort bezüglich der Verarbeitung Ihrer personenbezogenen Daten stehen. Auch haben Sie nach dem Bundesdatenschutzgesetz ein Recht auf unentgeltliche Auskunft über Ihre gespeicherten Daten sowie ggf. ein Recht auf Berichtigung, Sperrung oder Löschung dieser Daten. Sie können außerdem jederzeit die uns erteilte Einwilligung zur Datenerhebung und Verwendung ohne Angaben von Gründen widerrufen. Wenn Sie Fragen haben, die Ihnen diese Datenschutzerklärung nicht beantworten konnte oder wenn Sie zu einem Punkt vertiefte Informationen wünschen, wenden Sie sich bitte jederzeit an <a href="mailto:info@okfn.de">info@okfn.de</a>.</p>
-	
-	<p>VII. Sicherheitshinweis</p>
-	<p>Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.</p>
+	<p>Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p>
 </div>
 {% endblock %}
