--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %} - Offenes Ratsinformationssystem{% endblock %}
+{% block title %} | {{ config.site_name }}{% endblock %}
 
 {% block head %}
 {{super()}}
@@ -66,7 +66,7 @@ _gaq.push(['_trackPageview']);
 {% block content %}
 <div id="container">
 	<header>
-		<div id="topnav"><a href="/">Startseite</a> | <a href="http://openruhr.de/">Blog</a> | <a href="mailto:info@openruhr.de">Kontakt</a> | <a href="/impressum/">Impressum</a></div>
+		<div id="topnav"><a href="/">Startseite</a> | <a href="http://openruhr.de/">Blog</a> | <a href="/impressum/">Impressum</a> | <a href="/datenschutz/">Datenschutz</a></div>
 		<div id="logo"><a href="/"><img src="/static/img/logo/WasPassiertBeiMirLogo.png" alt="Was passiert bei mir? Logo" /></a></div>
 		<div id="nametagline">
 			<div><a id="name" href="/">Offenes Ratsinformationssystem</a></div>
