--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -67,7 +67,7 @@ _gaq.push(['_trackPageview']);
 <div id="container">
 	<header>
 		<div id="topnav"><a href="/">Startseite</a> | <a href="http://openruhr.de/">Blog</a> | <a href="/impressum/">Impressum</a> | <a href="/datenschutz/">Datenschutz</a></div>
-		<div id="logo"><a href="/"><img src="/static/img/logo/WasPassiertBeiMirLogo.png" alt="Was passiert bei mir? Logo" /></a></div>
+		<div id="logo"><a href="/"><img src="/static/img/logo/PolitikBeiUns.png" alt="Politik Bei Uns? Logo" /></a></div>
 		<div id="nametagline">
 			<div><a id="name" href="/">Offenes Ratsinformationssystem</a></div>
 			<div id="tagline">Transparente Kommunalpolitik für ganz Deutschland</div>
