--- a/webapp/templates/api.html
+++ b/webapp/templates/api.html
@@ -6,7 +6,7 @@
 {% block riscontent %}
 <div id="api">
 <div class="content top">
-  <h1>Die "Was passiert bei mir?" API</h1>
+  <h1>Die {{ config.site_name }} API</h1>
   <blockquote class="nice">API = engl. <em>Application Program Interface</em>: Eine Programmierschnittstelle für den Zugriff auf ein System.</blockquote>
   
   <p class="text">Das Ziel des offenen Ratsinformationssystems ist es, Daten und Informationen der Lokalpolitik so weit wie möglich für jede denkbare Nutzung zu öffnen. Dazu gehört auch die Öffnung für den Zugriff mit Hilfe von Programmen und Systemen.</p>
