--- a/webapp/templates/oparl.html
+++ b/webapp/templates/oparl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>OpenRuhr API</title>
+  <title>OKF-DE OParl API</title>
 </head>
 <body>
 	{% if is_dict(data) %}
