--- a/webapp/templates/hilfe.html
+++ b/webapp/templates/hilfe.html
@@ -6,74 +6,76 @@
 {% block riscontent %}
 
 <div class="content top">
-	<h1>{{config.APP_NAME}}</h1>
+	<h1>{{ config.site_name }}</h1>
   
-	<blockquote class="nice">Ziel von {{config.APP_NAME}} ist es, Informationen, Dokumente und Daten aus der {{config.CITY_NAME_ER}} Lokalpolitik für jedermann offen zugänglich zu machen.</blockquote>
+	<blockquote class="nice">Ziel von {{config.site_name}} ist es, Informationen, Dokumente und Daten aus der Lokalpolitik für jedermann offen zugänglich zu machen.</blockquote>
 	
-	<p>Dazu werden auf {{ config.BASE_HOST }} Dokumente und Daten, die im <a href="{{ config.RIS_ORIGINAL_URL }}" target="_blank">Ratsinformationssystem (<abbr title="Ratsinformationssystem">RIS</abbr>) der Stadt {{ config.CITY_NAME }}</a> veröffentlicht werden, gesammelt, aufbereitet und in einer nutzerfreundlichen Art und Weise dargestellt.</p>
+	<p>Dazu werden auf {{ config.site_host }} Dokumente und Daten, die in den jeweiligen Ratsinformationssystemen (<abbr title="Ratsinformationssystem">RIS</abbr>) veröffentlicht werden, gesammelt, aufbereitet und in einer nutzerfreundlichen Art und Weise dargestellt.</p>
 </div>
 <div class="content middle">
 		
-	<p style="text-align: center; margin: 0 5em;">{{ config.APP_NAME }} richtet sich an alle, die sich dafür interessieren, wie die {{ config.CITY_NAME_ER }} Politik ihr Leben direkt und indirekt beeinflusst. Dabei steht hinter dem Konzept die Vermutung, dass sich dieser Kreis der Interessierten durch den Abbau von Zugriffshürden vergrößern lässt.</p>
+	<p style="text-align: center; margin: 0 5em;">{{ config.site_name }} richtet sich an alle, die sich dafür interessieren, wie die kommunale Politik ihr Leben direkt und indirekt beeinflusst. Dabei steht hinter dem Konzept die Vermutung, dass sich dieser Kreis der Interessierten durch den Abbau von Zugriffshürden vergrößern lässt. Außerdem glauben wir, dass wir viel voneinander lernen können, so dass der Blick in die Nachbarkommune ebenfalls möglich sein sollte.</p>
 
 </div>
 <div class="content middle">
 	<div style="overflow: auto;">
-		<div style="float: left; width: 300px; padding-left: 8em;">
+		<div style="float: left; width: 310px; padding-left: 20px;">
 			<img src="/static/img/ueber/ueber-indeinernaehe.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
-		<div style="float: left; width: 250px;">
+		<div style="float: left; width: 310px;">
 			<p><b>Dinge in meiner Nähe</b>: Durch die in den Dokumenten enthaltenen Namen von Straßen und Plätzen kannst Du Dokumente und Vorgänge finden, die mit Orten in Deinem Umfeld zu tun haben. Dafür gibst Du auf der Startseite nur Deinen Standort oder Ort von Interesse an. <a href="/">Jetzt ausprobieren</a></p>
+			<p>Hierbei musst Du zunächst die Straße, Stadt angeben. Außerdem kannst Du die Region einschränken, wenn Du dies möchtest. Auf der Karte werden dann Straßen mit Suchergebnissen rot unterlegt. Klicke auf die Straße, um die Dokumente zu erhalten.</p>
 		</div>
 	</div>
 </div>
 <div class="content middle">
 	<div style="overflow: auto; text-align: right;">
-		<div style="float: right; width: 300px; padding-right: 8em;">
+		<div style="float: right; width: 310px; padding-right: 20px;">
 			<img src="/static/img/ueber/ueber-suche.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
-		<div style="float: right; width: 250px;">
+		<div style="float: right; width: 310px;">
 			<p><b>Flexible Suchfunktionen</b>: Die Suche ermöglicht Dir nicht nur die Suche nach Stichwörtern, auch aus dem Volltext von Dokumenten. Du kannst das Suchergebnis auch auf bestimmte Gremien, wie z.B. die Bezirksvertretung Deines Bezirks, oder nach Arten von Dokumenten beschränken. <a href="/suche/">Ausprobieren</a></p>
+			<p>Die Suche unterstützt außerdem Satzfragmente in Anführungszeichen, also z.B. <a href="/suche/?q=&quot;Vorlage%20Verwaltungsrat&quot;">"Anlage Verwaltungsrat"</a>. Es wird immer nach allen Suchbegriffen gesucht (logisches und).</p>
 		</div>
 	</div>
 </div>
 <div class="content middle">
 	<div style="overflow: auto;">
-		<div style="float: left; width: 300px; padding-left: 8em;">
+		<div style="float: left; width: 310px; padding-left: 20px;">
 			<img src="/static/img/ueber/ueber-anlagenvorschau.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
-		<div style="float: left; width: 250px;">
+		<div style="float: left; width: 310px;">
 			<p><b>Anlagen-Vorschau</b>: Du kannst Anlagen zu Dokumenten, bevor Du sie zur detaillierten Einsicht herunter lädst, in einer schnellen Voransicht ansehen. Damit kannst Du schnell einen Eindruck bekommen, um welche Art von Dokument es sich handelt: Antragstext, Bericht, Präsentation etc. Damit fällt die Entscheidung, welches Dokument einen näheren Blick wert ist, leichter. <a href="/suche/">Ausprobieren</a></p>
 		</div>
 	</div>
 </div>
 <div class="content middle">
 	<div style="overflow: auto; text-align: right;">
-		<div style="float: right; width: 300px; padding-right: 8em;">
+		<div style="float: right; width: 310px; padding-right: 20px;">
 			<img src="/static/img/ueber/ueber-persistenteurls.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
-		<div style="float: right; width: 250px;">
+		<div style="float: right; width: 310px;">
 			<p><b>Persistente URLs für Anlagen</b>: Anders als im RIS der jeweiligen Stadt kannst Du alle Anlagen (z.B. PDF-Dokumente) über einen öffentlichen, langfristig bestehenden <abbr title="Uniform Resource Locator">URL</abbr> abrufen. Dies ist eine Grundvoraussetzung, damit Du einen Favoriten/ein Lesezeichen auf die Datei setzen kannst. Oder einen Link zum Dokument per E-Mail weiter senden.</p>
 		</div>
 	</div>
 </div>
 <div class="content middle">
 	<div style="overflow: auto;">
-		<div style="float: left; width: 300px; padding-left: 8em;">
+		<div style="float: left; width: 310px; padding-left: 20px;">
 			<img src="/static/img/ueber/ueber-daten.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
-		<div style="float: left; width: 250px;">
+		<div style="float: left; width: 310px;">
 			<p><b>Daten-Download</b>: Die Datenbank hinter "Was passiert bei mir?" steht zum Download zur Verfügung. <a href="/daten/">Mehr erfahren</a></p>
 		</div>
 	</div>
 </div>
 <div class="content middle">
 	<div style="overflow: auto; text-align: right;">
-		<div style="float: right; width: 300px; padding-right: 8em;">
+		<div style="float: right; width: 310px; padding-right: 20px;">
 			<img src="/static/img/ueber/ueber-api.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
-		<div style="float: right; width: 250px;">
-			<p><b>API</b>: Unsere Daten sind nicht nur als Download verfügbar. Wir haben auch eine API, also eine Schnittstelle zum gezielten Abruf bestimmter Daten mit Hilfe von Software. <a href="/api/">Mehr erfahren</a></p>
+		<div style="float: right; width: 310px;">
+			<p><b>API</b>: Unsere Daten sind nicht nur als Download verfügbar. Wir haben auch eine auf dem Standard OParl basierte API, also eine Schnittstelle zum gezielten Abruf bestimmter Daten mit Hilfe von Software. <a href="/api/">Mehr erfahren</a></p>
 		</div>
 	</div>
 </div>
@@ -81,7 +83,7 @@
 <div class="content bottom" id="links">
 	<h2 class="top-nomargin">Zum Weiterklicken</h2>
 	<p>Niemand ist eine Insel, erst recht nicht im World Wide Web. Daher gibt es hier gesammelt wesentliche Links zu relevanten Ressourcen.</p>
-	<p>Das jeweilige lokaleRatsinformationssystem der Stadt ist die Quelle der Dokumente, dier hier zu finden sind.</p>
-	<p>Sowas wie "Was passiert bei mir?" gibt es schon länger in Frankfurt unter dem Namen <a href="http://www.frankfurt-gestalten.de/" target="_blank">Frankfurt gestalten</a>. Interessierte, die solche und ähnliche Plattformen in anderen Städten fördern wollen, diskutieren auf der <a href="http://lists.okfn.org/mailman/listinfo/ris" target="_blank">OKF RIS</a>. Überregionale Anlaufstellen, um sich Mitstreiter für ein solches Projekt zu suchen, ist das <a href="http://opendata-network.org/" target="_blank">Open Data Network</a> und die <a href="http://okfn.de/" target="_blank">Open Knowledge Foundation Deutschland</a>.</p>
+	<p>Das jeweilige lokale Ratsinformationssystem der Stadt ist die Quelle der Dokumente, dier hier zu finden sind. Die Quellen stehen bei den einzelnen Dokumenten dabei.</p>
+	<p>Sowas wie "Was passiert bei mir?" gibt es schon länger in Frankfurt unter dem Namen <a href="http://www.frankfurt-gestalten.de/" target="_blank">Frankfurt gestalten</a>. Interessierte, die solche und ähnliche Plattformen in anderen Städten fördern wollen, diskutieren auf der <a href="http://lists.okfn.org/mailman/listinfo/ris" target="_blank">OKF RIS</a>. Überregionale Anlaufstellen, um sich Mitstreiter für ein solches Projekt zu suchen, ist die <a href="http://okfn.de/" target="_blank">Open Knowledge Foundation Deutschland</a>. Einige schöne Beispiele für andere Datenanwendungen findet man im <a href="http://opendata-showroom.org/de/">Open Data Showroom</a>.</p>
 </div>
 {% endblock %}
