--- a/webapp/templates/ueber.html
+++ b/webapp/templates/ueber.html
@@ -33,16 +33,16 @@
 	<div style="text-align: center; margin-top: 3em; margin-bottom: 2em">
 		<div style="overflow: auto; width: 750px; margin: 0px auto;">
 			<div style="float: left; width: 160px; margin: 0 3em;">
-				<div style="height: 82px;"><a href="https://www.facebook.com/pages/Openruhr/565665453457389" target="_blank"><img src="/static/img/facebook-f.png" width="71" height="70" alt="Facebook" style="border: 0"/></a></div>
-				<div style="margin-top: 5px;"><a href="https://www.facebook.com/pages/Openruhr/565665453457389" target="_blank">Facebook</a></div>
+				<div style="height: 82px;"><a href="https://www.facebook.com/OKFNetwork" target="_blank"><img src="/static/img/facebook-f.png" width="71" height="70" alt="Facebook" style="border: 0"/></a></div>
+				<div style="margin-top: 5px;"><a href="https://www.facebook.com/OKFNetwork" target="_blank">Facebook</a></div>
 			</div>
 			<div style="float: left; width: 160px; margin: 0 3em;">
-				<div style="height: 82px;"><a href="https://twitter.com/openruhr" target="_blank"><img src="/static/img/twitter-bird.png" width="87" height="61" alt="Facebook" style="border: 0"/></a></div>
-				<div style="margin-top: 5px;"><a href="https://twitter.com/openruhr" target="_blank">Twitter</a></div>
+				<div style="height: 82px;"><a href="https://twitter.com/PolitikBeiUns" target="_blank"><img src="/static/img/twitter-bird.png" width="87" height="61" alt="Twitter" style="border: 0"/></a></div>
+				<div style="margin-top: 5px;"><a href="https://twitter.com/PolitikBeiUns" target="_blank">Twitter</a></div>
 			</div>
 			<div style="float: left; width: 160px; margin: 0 3em;">
-				<div style="height: 82px;"><img src="/static/img/github-octocat.png" width="87" height="77" alt="Facebook" style="border: 0"/></div>
-				<div style="margin-top: 5px;"><a href="https://github.com/marians/offeneskoeln" target="_blank" title="Der Code für offeneskoeln.de">Plattform</a> und <a href="https://github.com/marians/scrape-a-ris" target="_blank" title="Software zum Auslesen des {{ config.CITY_NAME_ER }} Ratsinformationssystems">Scraper</a> als Open Source Software auf Github</div>
+				<div style="height: 82px;"><img src="/static/img/github-octocat.png" width="87" height="77" alt="GitHub" style="border: 0"/></div>
+				<div style="margin-top: 5px;"><a href="https://github.com/okfde/ris-web" target="_blank" title="Der Code der {{ config.site_host }}">Plattform</a> und <a href="https://github.com/okfde/ris-scraper" target="_blank" title="Software zum Auslesen von Ratsinformationssystemen">Scraper</a> als Open Source Software auf Github</div>
 			</div>
 		</div>
 	</div>
