--- a/webapp/templates/hilfe.html
+++ b/webapp/templates/hilfe.html
@@ -14,7 +14,7 @@
 </div>
 <div class="content middle">
 		
-	<p style="text-align: center; margin: 0 5em;">{{ config.site_name }} richtet sich an alle, die sich dafür interessieren, wie die kommunale Politik ihr Leben direkt und indirekt beeinflusst. Dabei steht hinter dem Konzept die Vermutung, dass sich dieser Kreis der Interessierten durch den Abbau von Zugriffshürden vergrößern lässt. Außerdem glauben wir, dass wir viel voneinander lernen können, so dass der Blick in die Nachbarkommune ebenfalls möglich sein sollte.</p>
+	<p style="text-align: center; margin: 0 5em;">{{ config.site_name }} richtet sich an alle, die sich dafür interessieren, wie die kommunale Politik ihr Leben direkt und indirekt beeinflusst. Wir vermuten, dass sich dieser Kreis der Interessierten durch eine Erleichterung des Zugangs zu Informationen vergrößern lässt. Außerdem glauben wir, dass wir viel voneinander lernen können, so dass der Blick in die Nachbarkommune ebenfalls möglich sein sollte.</p>
 
 </div>
 <div class="content middle">
@@ -23,7 +23,7 @@
 			<img src="/static/img/ueber/ueber-indeinernaehe.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
 		<div style="float: left; width: 310px;">
-			<p><b>Dinge in meiner Nähe</b>: Durch die in den Dokumenten enthaltenen Namen von Straßen und Plätzen kannst Du Dokumente und Vorgänge finden, die mit Orten in Deinem Umfeld zu tun haben. Dafür gibst Du auf der Startseite nur Deinen Standort oder Ort von Interesse an. <a href="/">Jetzt ausprobieren</a></p>
+			<p><b>Dinge in meiner Nähe</b>: Über das obere Suchfeld der Startseite kannst Du nach Straßen und Plätzen suchen, die in Dokumenten und Vorgängen erwähnt wurden. Geben bitte zunächst die Straße und die Stadt an. Wenn Du möchtest, kannst Du weiter oben die Suche auf eine bestimmte Region beschränken. Im Suchergebnis werden auf der Karte Straßen im Umkreis des gesuchten Ortes rot unterlegt. Ein Klick auf die Straße zeigt dann eine zugehörige Zahl an Treffern, über die Du mit einem weiteren Klick zu den Dokumenten gelangst. <a href="/">Ausprobieren</a></p>
 			<p>Hierbei musst Du zunächst die Straße, Stadt angeben. Außerdem kannst Du die Region einschränken, wenn Du dies möchtest. Auf der Karte werden dann Straßen mit Suchergebnissen rot unterlegt. Klicke auf die Straße, um die Dokumente zu erhalten.</p>
 		</div>
 	</div>
@@ -34,8 +34,7 @@
 			<img src="/static/img/ueber/ueber-suche.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
 		<div style="float: right; width: 310px;">
-			<p><b>Flexible Suchfunktionen</b>: Die Suche ermöglicht Dir nicht nur die Suche nach Stichwörtern, auch aus dem Volltext von Dokumenten. Du kannst das Suchergebnis auch auf bestimmte Gremien, wie z.B. die Bezirksvertretung Deines Bezirks, oder nach Arten von Dokumenten beschränken. <a href="/suche/">Ausprobieren</a></p>
-			<p>Die Suche unterstützt außerdem Satzfragmente in Anführungszeichen, also z.B. <a href="/suche/?q=&quot;Vorlage%20Verwaltungsrat&quot;">"Anlage Verwaltungsrat"</a>. Es wird immer nach allen Suchbegriffen gesucht (logisches und).</p>
+			<p><b>Flexible Suchfunktionen</b>: Über das untere Suchfeld der Startseite kannst Du nach allen Wörtern suchen, die in den Dokumenten vorkommen. Du kannst das Suchergebnis auch auf bestimmte Gremien, wie z.B. die Bezirksvertretung Ihres Bezirks, oder nach Arten von Dokumenten beschränken. Es kann außerdem nach Satzteilen gesucht werden: Diese setze bitte in Anführungszeichen, also z.B. "Anlage Verwaltungsrat". <a href="/suche/">Ausprobieren</a></p>
 		</div>
 	</div>
 </div>
@@ -55,7 +54,7 @@
 			<img src="/static/img/ueber/ueber-persistenteurls.jpg" width="250" height="250" alt="Screenshot" style="border: 1px solid #fff" />
 		</div>
 		<div style="float: right; width: 310px;">
-			<p><b>Persistente URLs für Anlagen</b>: Anders als im RIS der jeweiligen Stadt kannst Du alle Anlagen (z.B. PDF-Dokumente) über einen öffentlichen, langfristig bestehenden <abbr title="Uniform Resource Locator">URL</abbr> abrufen. Dies ist eine Grundvoraussetzung, damit Du einen Favoriten/ein Lesezeichen auf die Datei setzen kannst. Oder einen Link zum Dokument per E-Mail weiter senden.</p>
+			<p><b>Persistente URLs für Anlagen</b>: Anders als im Ratsinformationssystem der jeweiligen Stadt kannst Du alle Anlagen (z.B. PDF-Dokumente) über einen öffentlichen, langfristig bestehenden <abbr title="Uniform Resource Locator">URL</abbr> abrufen. Dies ist eine Grundvoraussetzung, damit Du einen Favoriten/ein Lesezeichen auf die Datei setzen oder einen Link zum Dokument per E-Mail weiter senden kannst.</p>
 		</div>
 	</div>
 </div>
