Logo + Favicon Update

--- a/webapp/templates/layout.html
+++ b/webapp/templates/layout.html
@@ -18,8 +18,8 @@
 {% if config['google_site_verification'] %}
 <meta name="google-site-verification" content="{{ config['google_site_verification'] }}" />
 {% endif %}
-<link rel="icon" href="/static/img/logo/OpenRuhrFavIcon.png" />
-<link rel="shortcut icon" href="/static/img/logo/OpenRuhrFavIcon.png" />
+<link rel="icon" type="image/vnd.microsoft.icon" href="/static/img/logo/favicon.ico" />
+<link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/static/img/logo/favicon.ico" />
 {% endblock %}
 
 {% block styles %}
