--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -53,7 +53,7 @@ var CONF = {
 				</div>
 			</form>
 		</div>
-		<p style="text-align: center;">Bislang gibt es Daten für die Städte Bochum, Köln und Moers. Die Suche benötigt die Angabe einer Straße für sinnvolle Ergebnisse.</p>
+		<p style="text-align: center;">Bislang gibt es Daten für die Städte Bochum, Köln und Moers. Die Suche benötigt die Angabe einer Straße und Stadt für sinnvolle Ergebnisse.</p>
 	</div>
 	<div id="map" style="margin-top: 3px;"></div>
 	<div class="content bottom searchform">
